k8s/manifests/gateway/gateway-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
  labels:
    tier: infra
